--- a/index.html
+++ b/index.html
@@ -52,5 +52,11 @@
             </div>
         </div>
     </section>
+    <h1>Loyalty Program</h1>
+    <h2>Join our loyalty program for exclusive benefits</h2>
+    <h3>Sign up today and start earning rewards!</h3>
+    <h4>Contact us for more details</h4>
+    <h5>Email: info@exploreencounters.com</h5>
+    <h6>Phone: (123) 456-7890</h6>
 </body>
 </html>
