--- a/index.html
+++ b/index.html
@@ -11,52 +11,62 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="header__left">
-                <img src="./assets/Vector (1).png" alt="" class="header__png">
+    <div class="container">
+        <div class="header__left">
+            <img src="./assets/Vector (1).png" alt="" class="header__png">
             <h3 class="header__title">Explore Encounters</h3>
         </div>
         <div class="header__right">
-            <button class="header__button">Expedition</button>
+            <a href="" class="header__button">Expedition</a>
         </div>
-        </div>
-    </header>
+    </div>
+</header>
     <section class="hero">
-        <div class="hero__container">
+    <div class="hero__container">
         <div class="hero__info">
             <h1 class="hero__title">CHASE THE <br> FEELING YOU <br> CAN'T GET FROM <br> A SCREEN</h1>
             <p class="hero__text">Unleash wonder where the wild comes to life</p>
-            <button class="button">Explore Encounters</button>
+            <a href="" class="button">Explore Encounters</a>
         </div>
-        </div>
-    </section>
+    </div>
+</section>
     <section class="closer">
-        <div class="closer__container">
-            <div class="closer__left">
-                <h1 class="closer__title">GET CLOSER TO <br> THE WILD THAN <br> EVER BEFORE</h1>
-                <div class="closer__text">Thrilling, up-close encounters that you’ll never forget</div>
-                <div class="button button-bgcolor">Plan Expedition</div>
-                <div class="button button-border">Explore Encounters</div>
-            </div>
-            <div class="closer__right">
-                <div class="closer__card card-1">
-                <img src="./assets/1b6262728f4b46f1927af3e9c1b568fc2f7165bd.jpg" alt="">
-                <h3 class="closer__subtitle">WATERFALL <br> HIKES</h3>
-                <p class="closer__subtext">Hike through lush trails and beneath <br> breathtaking waterfalls</p>
-                </div>
-                <div class="closer__card card-2">
-                    <img src="./assets/334a25867997e556b6862b9d4e7cb42bdd249e5e.jpg" alt="">
-                    <h3 class="closer__subtitle">CAVE <br> SWIMMING</h3>
-                    <p class="closer__subtext">Swim through stunning caves in <br> crystal-clear waters</p>
-                </div>
+    <div class="closer-text">
+        <h1>GET CLOSER TO <br> <span>THE WILD</span> THAN <br> EVER BEFORE</h1>
+        <p>Thrilling, up-close encounters that you’ll never forget</p>
+        <div class="buttons">
+            <a href="#" class="btn bgcolor">Plan Expedition</a>
+            <a href="#" class="btn border">Explore Encounters</a>
+        </div>
+    </div>
+    <div class="closer-cards">
+        <div class="card">
+            <img src="./assets/1b6262728f4b46f1927af3e9c1b568fc2f7165bd.jpg" alt="">
+            <div class="card-content">
+                <h2>WATERFALL<br>HIKES</h2>
+                <p>Hike through lush trails and beneath breathtaking waterfalls</p>
             </div>
         </div>
-    </section>
-    <h1>Loyalty Program</h1>
-    <h2>Join our loyalty program for exclusive benefits</h2>
-    <h3>Sign up today and start earning rewards!</h3>
-    <h4>Contact us for more details</h4>
-    <h5>Email: info@exploreencounters.com</h5>
-    <h6>Phone: (123) 456-7890</h6>
+        <div class="card">
+            <img src="./assets/334a25867997e556b6862b9d4e7cb42bdd249e5e.jpg" alt="">
+            <div class="card-content">
+                <h2>CAVE<br>SWIMMING</h2>
+                <p>Swim through stunning caves in crystal-clear waters</p>
+            </div>
+        </div>
+    </div>
+</section>
+    <section class="way">
+    <div class="way-text">
+        <h1>
+        YOUR ADVENTURE<br><span>YOUR WAY</span>
+        </h1>
+        <p>We go beyond the ordinary, crafting immersive experiences that bring you closer to <br> nature while prioritizing safety, sustainability, and unforgettable moments.</p>
+        <a href="#" class="btn border">Discover the Difference</a>
+    </div>
+</section>
+<section class="">
+
+</section>
 </body>
 </html>
